--- a/helloworld.html
+++ b/helloworld.html
@@ -7,16 +7,12 @@
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
-    <div id="root"></div>
-    <script
-     crossorigin 
-     src="https://unpkg.com/react@18/umd/react.development.js">
-    </script>
-<script
- crossorigin 
- src="https://unpkg.com/react-dom@18/umd/react-dom.development.js">
-</script>
-<script src="./React.js">
+    <div id="root">Hi</div>
+  
+<script type="module" src="./App.js">
 </script>
 </body>
+
+
 </html> 
+
